# cut-tube

./: .editorconfig  .gitignore  README.md  dev.docker-compose.yml  prod.docker-compose.yml  run-tests.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
cut-tube-api/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cut Tube.postman_collection.json  Dockerfile.development  Dockerfile.production  app.py  pyproject.toml  requirements.txt
cut-tube-api/src/blueprints/: routes.py
cut-tube-api/src/blueprints/v1/: cut_bp.py
cut-tube-api/src/configs/: default_config.py  gunicorn_config.py  logger_config.py  testing_config.py
cut-tube-api/src/constants/: codes.py  messages.py  paths.py  vars.py
cut-tube-api/src/controllers/: cut_controller.py
cut-tube-api/src/models/: clip_model.py
cut-tube-api/src/services/: file_service.py  video_tube_service.py
cut-tube-api/src/utils/: exceptions_decorator.py  exceptions_handler.py  helpers.py
cut-tube-api/tests/: conftest.py
cut-tube-api/tests/test_blueprints/: test_cut_bp.py  test_health_bp.py  test_routes.py
cut-tube-api/tests/test_configs/: test_default_config.py  test_development_config.py  test_gunicorn_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
cut-tube-api/tests/test_constants/: test_codes.py  test_messages.py  test_paths.py  test_vars.py
cut-tube-api/tests/test_controllers/: test_cut_controller.py  test_health_controller.py
cut-tube-api/tests/test_models/: test_clip_model.py
cut-tube-api/tests/test_services/: test_file_service.py  test_video_tube_service.py
cut-tube-api/tests/test_utils/: test_exceptions.py  test_exceptions_decorator.py  test_exceptions_handler.py  test_helpers.py
cut-tube-app/: .dockerignore  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
(+46 files in other folders)
